tests/duplicate-bindings.lushui
;; TEST fail check
;; @Bug regression: this used to produce 6 errors, now it only produces one
;; this probably happened because of the implementation of order independence
;; example commit where it still behaved as expected: 3d9b61a42e35ec4b29932a12b25b95f444448271

module core

use core.nat.Nat

data Alpha: Type =
    alpha (beta: Alpha): Alpha

Alpha: Type = Type

beta: Nat = 1000

module capsule: =
    use super.Nat

    data Nat: Type =
        zero: Nat
        successor: Nat -> Nat

beta (x y: Nat): Nat = y

capsule: Nat = beta

data ALIKE: Type =
    ALIKE: ALIKE

zero: Nat = 0

use capsule.zero
